# internal/gen/swagger/koko.swagger.json
@@ -1764,6 +1764,13 @@
                 },
                 "service": {
                   "$ref": "#/definitions/kong.admin.model.v1.Service"
+                },
+                "expression": {
+                  "type": "string"
+                },
+                "priority": {
+                  "type": "integer",
+                  "format": "int32"
                 }
               }
             }
@@ -3792,6 +3799,13 @@
         },
         "service": {
           "$ref": "#/definitions/kong.admin.model.v1.Service"
+        },
+        "expression": {
+          "type": "string"
+        },
+        "priority": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
